--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             <!-- Body -->
             <line x1="140" y1="90" x2="140" y2="150" class="figure-part" />
             <!-- Arms -->
-            <line x1="20" y1="230" x2="100" y2="230" class="figure-part" />
-            <line x1="20" y1="230" x2="100" y2="230" class="figure-part" />
+            <line x1="140" y1="120" x2="120" y2="100" class="figure-part" />
+            <line x1="140" y1="120" x2="160" y2="100" class="figure-part" />
             <!-- Legs -->
-            <line x1="20" y1="230" x2="100" y2="230" class="figure-part" />
-            <line x1="20" y1="230" x2="100" y2="230" class="figure-part" />
+            <line x1="140" y1="150" x2="120" y2="180" class="figure-part" />
+            <line x1="140" y1="150" x2="160" y2="180" class="figure-part" />
         </svg>
 
         <div class="wrong-letters-container">
@@ -38,7 +38,7 @@
     </div>
 
     <!-- Container for final message -->
-    <div class="pop-container" id="pop-container">
+    <div class="popup-container" id="popup-container">
         <div class="popup">
             <h2 id="final-message"></h2>
             <button id="play-button">Play Again</button>
